--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-24.04
 
     steps:
-     - uses: actions/checkout@v4
+     - uses: actions/checkout@v5
        with:
          fetch-depth: 0
 
@@ -39,7 +39,7 @@ jobs:
     needs: run-unit-tests
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
@@ -66,15 +66,32 @@ jobs:
     environment:
       approve-test-execution
 
-  run-notebook-tests:
-    uses: ./.github/workflows/notebook_tests.yaml
-    secrets: inherit
+  run-notebook-docker-image-builder:
+    uses: ./.github/workflows/notebook_docker_image_builder.yaml
     needs: approval-for-notebook-tests
 
+  run-stable-notebook-tests:
+    uses: ./.github/workflows/notebook_tests.yaml
+    secrets: inherit
+    with:
+      status-filter: stable
+    needs: run-notebook-docker-image-builder
+
+  run-unstable-notebook-tests:
+    uses: ./.github/workflows/notebook_tests.yaml
+    secrets: inherit
+    with:
+      status-filter: unstable
+    needs: run-notebook-docker-image-builder
+
   gate-2:
+    if: ${{ !cancelled() }}
     name: Gate 2 - Allow Merge
     runs-on: ubuntu-24.04
-    needs: [ run-unit-tests, run-integration-tests, run-notebook-tests ]
+    needs: [ run-unit-tests, run-integration-tests, run-stable-notebook-tests ]
     steps:
+      - name: Branch Protection - failure if any ancestor failed
+        if: ${{ contains(needs.*.result, 'failure') }}
+        run: exit 1
       - name: Branch Protection
         run: true
