--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -84,11 +84,27 @@ jobs:
       status-filter: unstable
     needs: run-notebook-docker-image-builder
 
+  approval-for-gpu-notebook-tests:
+    name: Run Jupyter Notebook Tests?
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Detect Running GPU Notebook Tests
+        run: true
+    environment:
+      approve-gpu-test-execution
+
+  run-stable-gpu-notebook-tests:
+    uses: ./.github/workflows/notebook_tests.yaml
+    secrets: inherit
+    with:
+      status-filter: stable
+    needs: [run-notebook-docker-image-builder, approval-for-gpu-notebook-tests]
+
   gate-2:
     if: ${{ !cancelled() }}
     name: Gate 2 - Allow Merge
     runs-on: ubuntu-24.04
-    needs: [ run-unit-tests, run-integration-tests, run-stable-notebook-tests ]
+    needs: [ run-unit-tests, run-integration-tests, run-stable-notebook-tests, run-stable-gpu-notebook-tests ]
     steps:
       - name: Branch Protection - failure if any ancestor failed
         if: ${{ contains(needs.*.result, 'failure') }}
