--- a/nb_tests.yaml
+++ b/nb_tests.yaml
@@ -71,7 +71,7 @@ large:
     tests:
 gpu:
   runner: int-linux-x64-4core-gpu-t4-ubuntu24.04-1
-  additional_pytest_parameters:
+  additional_pytest_parameters: '--nb-test-with-gpu'
   stable:
     tests:
       - name: GPU UDF notebooks
