Added caching of SLC

--- a/.github/workflows/notebook_tests.yaml
+++ b/.github/workflows/notebook_tests.yaml
@@ -96,3 +96,5 @@ jobs:
           NBTEST_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
           NBTEST_AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
           PROJECT_SHORT_TAG: XAIL-NB
+          TARGET_DOCKER_USERNAME: ${{ secrets.TARGET_DOCKER_USERNAME }}
+          TARGET_DOCKER_PASSWORD: ${{ secrets.TARGET_DOCKER_PASSWORD }}
