Activated all tests

--- a/nb_tests.yaml
+++ b/nb_tests.yaml
@@ -7,30 +7,30 @@ normal:
         test_file: nbtest_cloud.py
         test_backend: onprem
         wip: no-wip
-#      - name: sklearn notebook
-#        test_file: nbtest_sklearn.py
-#        test_backend: onprem
-#        wip: no-wip
-#      - name: ibis notebook
-#        test_file: nbtest_ibis.py
-#        test_backend: onprem
-#        wip: no-wip
-#      - name: SLC notebook
-#        test_file: nbtest_script_languages_container.py
-#        test_backend: onprem
-#        wip: no-wip
-#      - name: SME notebooks onprem
-#        test_file: nbtest_sagemaker.py
-#        test_backend: onprem
-#        wip: no-wip
-#      - name: TE notebooks onprem
-#        test_file: nbtest_transformers.py
-#        test_backend: onprem
-#        wip: no-wip
-#      - name: short notebook tests
-#        test_file: "\"nbtest_environment_test.py nbtest_itde.py\""
-#        test_backend: ''
-#        wip: no-wip
+      - name: sklearn notebook
+        test_file: nbtest_sklearn.py
+        test_backend: onprem
+        wip: no-wip
+      - name: ibis notebook
+        test_file: nbtest_ibis.py
+        test_backend: onprem
+        wip: no-wip
+      - name: SLC notebook
+        test_file: nbtest_script_languages_container.py
+        test_backend: onprem
+        wip: no-wip
+      - name: SME notebooks onprem
+        test_file: nbtest_sagemaker.py
+        test_backend: onprem
+        wip: no-wip
+      - name: TE notebooks onprem
+        test_file: nbtest_transformers.py
+        test_backend: onprem
+        wip: no-wip
+      - name: short notebook tests
+        test_file: "\"nbtest_environment_test.py nbtest_itde.py\""
+        test_backend: ''
+        wip: no-wip
 
   unstable:
     tests:
@@ -38,35 +38,35 @@ normal:
         test_file: nbtest_cloud.py
         test_backend: saas
         wip: no-wip
-#      - name: sklearn
-#        test_file: nbtest_sklearn.py
-#        test_backend: saas
-#        wip: no-wip
-#      - name: ibis notebook
-#        test_file: nbtest_ibis.py
-#        test_backend: saas
-#        wip: no-wip
-#      - name: SME notebooks
-#        test_file: nbtest_sagemaker.py
-#        test_backend: saas
-#        wip: no-wip
-#      - name: TE notebooks
-#        test_file: nbtest_transformers.py
-#        test_backend: saas
-#        wip: no-wip
-#      - name: TXAIE notebooks
-#        test_file: nbtest_text_ai.py
-#        test_backend: saas
-#        wip: no-wip
+      - name: sklearn
+        test_file: nbtest_sklearn.py
+        test_backend: saas
+        wip: no-wip
+      - name: ibis notebook
+        test_file: nbtest_ibis.py
+        test_backend: saas
+        wip: no-wip
+      - name: SME notebooks
+        test_file: nbtest_sagemaker.py
+        test_backend: saas
+        wip: no-wip
+      - name: TE notebooks
+        test_file: nbtest_transformers.py
+        test_backend: saas
+        wip: no-wip
+      - name: TXAIE notebooks
+        test_file: nbtest_text_ai.py
+        test_backend: saas
+        wip: no-wip
 large:
   runner: int-linux-x64-4core-ubuntu24.04-1
   additional_pytest_parameters: '--nb-test-db-mem-size="8 GiB"'
   stable:
-    tests: []
-#      - name: TXAIE notebooks onprem
-#        test_file: nbtest_text_ai.py
-#        test_backend: onprem
-#        wip: no-wip
+    tests:
+      - name: TXAIE notebooks onprem
+        test_file: nbtest_text_ai.py
+        test_backend: onprem
+        wip: no-wip
   unstable:
     tests: []
 gpu:
