--- a/.github/actions/prepare_test_env/action.yml
+++ b/.github/actions/prepare_test_env/action.yml
@@ -29,6 +29,6 @@ runs:
      run: sudo sysctl -w kernel.apparmor_restrict_unprivileged_userns=0
 
    - name: Setup Python & Poetry Environment
-     uses: exasol/python-toolbox/.github/actions/python-environment@v1
+     uses: exasol/python-toolbox/.github/actions/python-environment@bugs/always_call_poetry_install_in_setup_python
      with:
        python-version: "3.10"
