--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v5
 
     - name: Setup Python & Poetry Environment
-      uses: exasol/python-toolbox/.github/actions/python-environment@v1
+      uses: exasol/python-toolbox/.github/actions/python-environment@bugs/always_call_poetry_install_in_setup_python
       with:
         python-version: "3.10"
 
