--- a/.github/workflows/release_droid_upload_github_release_assets.yml
+++ b/.github/workflows/release_droid_upload_github_release_assets.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@bugs/always_call_poetry_install_in_setup_python
+        uses: exasol/python-toolbox/.github/actions/python-environment@v1
         with:
           python-version: "3.10"
       - name: Build Release
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@bugs/always_call_poetry_install_in_setup_python
+        uses: exasol/python-toolbox/.github/actions/python-environment@v1
         with:
           python-version: "3.10"
       - name: Build Release
