--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,7 +63,20 @@ jobs:
 
   run-notebook-docker-image-builder:
     uses: ./.github/workflows/notebook_docker_image_builder.yaml
-    needs: approval-for-notebook-tests
+    # needs: approval-for-notebook-tests
+
+  run-experimental-notebook-tests:
+    uses: ./.github/workflows/notebook_tests.yaml
+    strategy:
+      fail-fast: false
+      matrix:
+        class: [ normal ]
+    secrets: inherit
+    with:
+      status-filter: experimental
+      test-classification: ${{ matrix.class }}
+    needs:
+      - run-notebook-docker-image-builder
 
   run-stable-notebook-tests:
     uses: ./.github/workflows/notebook_tests.yaml
@@ -75,7 +88,9 @@ jobs:
     with:
       status-filter: stable
       test-classification: ${{ matrix.class }}
-    needs: run-notebook-docker-image-builder
+    needs:
+      - run-notebook-docker-image-builder
+      - approval-for-notebook-tests
 
   run-unstable-notebook-tests:
     uses: ./.github/workflows/notebook_tests.yaml
@@ -87,7 +102,9 @@ jobs:
     with:
       status-filter: unstable
       test-classification: ${{ matrix.class }}
-    needs: run-notebook-docker-image-builder
+    needs:
+      - run-notebook-docker-image-builder
+      - approval-for-notebook-tests
 
   approval-for-gpu-notebook-tests:
     name: Run Jupyter GPU Notebook Tests?
