don't execute large runners for now

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,7 +70,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        class: [ normal, large ]
+        class: [ normal ]
+        # class: [ normal, large ]
     secrets: inherit
     with:
       status-filter: stable
