Feature/420 Add Notebook "First Steps"  (#423)
* Added initial version of notebook for demoing first steps
* Added file SECURITY.md
* Commented out Demos importing Parquet data -- will be activated as soon as AI Lab has full support for Exasol 2025.* incl. pyexasol >= 1.2
* Updated notebook connector to version 2.2.0incl.  all optional dependencies


Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/nb_tests.yaml
+++ b/nb_tests.yaml
@@ -3,6 +3,10 @@ normal:
   additional_pytest_parameters:
   stable:
     tests:
+      - name: First Steps notebook
+        test_file: nbtest_first_steps.py
+        test_backend: onprem
+        wip: no-wip
       - name: CSE notebook
         test_file: nbtest_cloud.py
         test_backend: onprem
