#337: Ensured correct spelling for AI Lab

--- a/exasol/ds/sandbox/runtime/ansible/ai_lab_docker_playbook.yml
+++ b/exasol/ds/sandbox/runtime/ansible/ai_lab_docker_playbook.yml
@@ -25,7 +25,7 @@
       include_role:
         name: ansible_access
 
-- name: Setup AI-Lab Docker Container
+- name: Setup AI Lab Docker Container
   hosts: docker_container_group
   remote_user: "ubuntu"
   gather_facts: true
