--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ docker = {version = "^7.1.0", markers = "sys_platform != 'win32'"}
 fabric = "^3.2.2"
 requests = "^2.32.3"
 nox = "^2025.5.1"
+pre-commit = ">=4,<5"
 
 [build-system]
 requires = [
