--- a/.github/workflows/hyperlinks.yaml
+++ b/.github/workflows/hyperlinks.yaml
@@ -19,6 +19,7 @@ jobs:
          python-version: "3.10"
 
      - name: Check Hyperlinks in Documentation
+       # Ignored URLs are in file .lycheeignore
        id: lychee
        uses: lycheeverse/lychee-action@v2.0.2
        with:
